#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-07-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999958 released.

        * Updated FIGlet View Menu.

        * New version of Term::Menus paired with this release.


2014-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999957 released.

        * Added FIGlet font install.

        * New version of Term::Menus paired with this release.


2014-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999956 released.

        * AWS login assistance added.


2014-07-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999955 released.

        * New version of Term::Menus paired with this release.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999954 released.

        * New version of Term::Menus paired with this release.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999953 released.

        * Fixed Makefile.PL error.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999952 released.

        * Fixed Berkeley DB install.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999951 released.

        * New version of Term::Menus paired with this release.
 

2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999950 released.

        * Moved Module::Runtime up in dependency list.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999949 released.

        * Changed pipe to system() for Berkeley make.

