@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e022bfd992799f4c64ce090f8e21c9e0ec51dc93 ChangeLog
+SHA1 178be3a182c47ae184f732948e8cbfb993914013 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 9a30c2a18761f4c5c7fb3073fe52909af4df2140 META.yml
-SHA1 99935ecc85d84cde498c35e0fa929b0563081524 Makefile.PL
+SHA1 5a2b0c0d25c37630a3b6f83f962cbd7c736434b5 META.yml
+SHA1 0133133fe683894a7f0baebe7e3dd443c9a87b78 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 2ddc6a41becfac4cec29685d4cbb7984d060d666 lib/Net/FullAuto.pm
+SHA1 2d501f23d94b8a1e9e91fb2d30bd0008c2c2d961 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 1e9cdb0a94c0e832ac6240d6ae26fcab0cfebbc0 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 c6096414c9970ce64beb619cc9f0d78fe4d69993 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 5cd47764f40d9dbe4c03530677130433ceeb0fe4 lib/Net/FullAuto/FA_Core.pm
+SHA1 8a056852d61c31ad958f491aa9cb344ef59f0162 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTxnZKAAoJEBa/9Pad787ETVoH/RCVtwev2F7Ihfsje9AiuBGG
-NtsVj4O0TW7p+RdnMbc7aB4h4pY0hbc5NdosmcV/gg5awa2qrUTCq8Fadyu0nmas
-dikd7t4JISel06gmnmiLVzbWEyF82SUWZeD8sj0hCtmZ767A06CmIudGBzuxcPXx
-oKyBCzptFJ442Y9hj4SY/4/QPL7T1WTYwLfxA7sDTELTmqgn+mV61ebjB/OIVEJb
-Qb5NUj5VhC0C8/H/gWNTv8/aOF7M0pfu/+qD9o22MCubNZZIlh7neMBzF4tiN5Fi
-uVR2/6U8gOVrPU7YemPc6MgY8jdSvy8ItpgsDOb4D/4nEKP3VBFIy9ZSFHkNXBM=
-=WxXi
+iQEcBAEBAgAGBQJTxsZxAAoJEBa/9Pad787EWuwH/2yLCFHspETGFlpX15srr3VD
+jVUWNcdpngvzxMYEWGza2WsTtoFkvMPG3Xal4E5xmOZMty5cdjvP/PY+fZcc6RWd
+y4jsYo+WWQBO5ljbhQqY4NoxMy57/LdCeDuOEMVRqoj0ve5MIRp8aTjVC3F7pd2X
+plkbNcmCneRupsLlc13SZ25OU+JIceEE9dpjmmmHz73bMG3dWcYbJ3GkkaCG6ZMp
+b19p17eBWgxLsxH2PVkKCT2Mcs953Fy+pKlxtvRvuO+H/xNjR9fb140hS7ia4gwQ
+2+r+nPUW1EwcIwQvRAeSLur0P/N30v15pyp7QIdWSGJJ6KwHeb7LHUXbrBU5ng8=
+=y7kv
 -----END PGP SIGNATURE-----
