@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999958';
+our $VERSION='0.9999999959';
 
 
 use 5.005;
