@@ -22,6 +22,15 @@
 
 2014-07-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999959 released.
+
+        * Updated New User Experience.
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-07-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999958 released.
 
         * Updated FIGlet View Menu.
